# aibolit-claude

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.claude/: launch.json  settings.json
.claude/agents/: INDEX.md  ai-agents.md  analytics.md  architect.md  business-analyst.md  coder.md  compliance.md  content.md  data.md  dev.md  devops.md  marketing.md  medical-domain.md  orchestrator.md  product.md  qa.md  research.md  review.md  security.md  sre.md  ui.md  ux.md
.claude/commands/: INDEX.md  checkpoint.md  deploy-vps.md  medical-review.md  route.md  start-project.md  status.md  summary.md
.claude/rules/: 00-core.md  01-routing.md  02-context.md  03-ssh-operations.md  04-logging.md  05-medical-safety.md
.claude/skills/: INDEX.md  clinical-reasoning.md  context-manager.md  doctor-escalation.md  document-generator.md  github-actions.md  image-generator.md  langchain-development.md  medical-api-integration.md  medical-data-compliance.md  medical-imaging-ml.md  medical-knowledge-base.md  ssh-deployment.md  telegram-bot-api.md  telegram-core-api.md  ton-blockchain.md  verification-engine.md  web-research.md  (+1 more)
config/: claude_code_docker.json  claude_mcp_config.json
context/: project-brief.yaml
nginx/: nginx.conf
scripts/: migrate_json_to_sqlite.py  migrate_sqlite_to_postgres.py
src/: __init__.py  __main__.py  mcp_http.py  mcp_server.py
tests/: test_disclaimers.py  test_medical_safety.py  test_phase_r1_e2e.py  test_red_flags.py
(+171 files in other folders)
